# CSC109CH10EMPLOYEEABSTRACT

./: CMakeLists.txt  EmployeeManager.cpp  EmployeeManager.h  EmployeePerson.cpp  EmployeePerson.h  EmployeeStaff.cpp  EmployeeStaff.h  StudentManager.cpp  StudentManager.h  StudentWorker.cpp  StudentWorker.h  main.cpp
